Update to J17 features + fix ctor default params